src/MiniJava.g4
grammar MiniJava;

goal
	: mainClass (classDeclaration)*
	;

mainClass
	: 'class' identifier '{'
	'public' 'static' 'void' 'main' '(' 'String' '[' ']' identifier ')' '{'
	statement
	'}' '}'
	;

classDeclaration
	: 'class' identifier ( 'extends' identifier )? '{'
	(varDeclaration)*
	(methodDeclaration)*
	'}'
	;

varDeclaration
	: type identifier ';'
	;

methodDeclaration
	: 'public' type identifier '(' (type identifier (',' type identifier)*)? ')' '{'
	(varDeclaration)*
	(statement)*
	'return' expression ';'
	'}'
	;

type
	: 'int' '[' ']'
	| 'boolean'
	| 'int'
	| identifier
	;

statement
	: '{' (statement)* '}'
	| 'if' '(' expression ')' statement 'else' statement
	| 'while' '(' expression ')' statement
	| 'System.out.println' '(' expression ')' ';'
	| identifier '=' expression ';'
	| identifier '[' expression ']' '=' expression ';'
	;

expression
	: expression ('&&' | '<' | '+' | '-' | '*') expression
	| expression '[' expression ']'
	| expression '.' 'length'
	| expression '.' identifier  '(' (expression (',' expression)*)? ')'
	| INTEGER_LITERAL
	| 'true'
	| 'false'
	| identifier
	| 'this'
	| 'new' 'int' '[' expression ']'
	| 'new' identifier '(' ')'
	| '!' expression
	| '(' expression ')'
	;

identifier :
	IDENT
	;

WS
	: [ \t\r\n]+ -> skip
	;

COMMENT
	: '/*' .*? '*/' -> skip
	;

LINECOMMENT
	: '//' .*? '\r'? '\n' -> skip
	;

IDENT
	: [a-zA-Z_]+ [a-zA-Z0-9_]*
	;

INTEGER_LITERAL
	: [0-9]+
	;

OPERATORS
	: '&&' | '+' | '-' | '*' | '<'
	;

KW
	: 'class' | 'extends' | 'public'
	| 'static' | 'void' | 'main' | 'String'
	| 'return' | 'int' | 'boolean' | 'if'
	| 'while' | 'System' | 'out' | 'println'
	| 'true' | 'false' | 'this' | 'new'
	;
